gwr-config/tests/macro_properties/name_only.stderr
error: expected `=`
 --> tests/macro_properties/name_only.rs:5:1
  |
5 | #[multi_source_config(conf_file)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `multi_source_config` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find type `Config` in this scope
  --> tests/macro_properties/name_only.rs:13:18
   |
13 | impl Default for Config {
   |                  ^^^^^^ not found in this scope

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/macro_properties/name_only.rs:19:2
   |
19 | }
   |  ^ consider adding a `main` function to `$DIR/tests/macro_properties/name_only.rs`
